src/test/testData/AnnotatorUnresolvedInterface.klass
package example

class User implements <error descr="Cannot resolve symbol 'NonExistent'">NonExistent</error>
{
    name: String key;
}
